edit farsi first page

--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 /* --- [Master Stylesheet] ----
 :: 1.0 Base CSS Start
 :: 2.0 Header Area CSS
-:: 3.0 Wellcome Area CSS
+:: 3.0 Welcome Area CSS
 :: 4.0 Special Area CSS
 :: 5.0 Features Area CSS
 :: 6.0 Video Area CSS
 :: 7.0 Cool Facts Area CSS
-:: 8.0 Screenshots Area CSS
-:: 9.0 privacy Area CSS
+:: 8.0 Images Area CSS
+:: 9.0 Contact Area CSS
 :: 10.0 Footer Area CSS Start
 -------------------------- */
 
@@ -99,6 +99,11 @@ h6 {
 
 .section_padding_0_50 {
     padding-top: 0;
+    padding-bottom: 50px;
+}
+
+.section_padding_30_50 {
+    padding-top: 30px;
     padding-bottom: 50px;
 }
 
@@ -356,12 +361,21 @@ p {
     transition-duration: 500ms;
     padding: 35px 15px;
 }
-
-
-.menu_area nav ul li > a:hover {
-    color: #fb397d;
+.menu_area #nav .nav-link:hover {
+  color: #fb397d;
 }
 
+.dropdown-menu {
+  background-color: #884bdf;
+}
+
+.dropdown-item {
+  color: #fff !important;
+}
+.dropdown-item:hover {
+  background-color: #884bdf !important;
+  color: #fb397d !important;
+}
 /* stcicky css */
 
 .header_area.sticky {
@@ -388,7 +402,7 @@ p {
 
 
 /* --------------------------
-:: 3.0 wellcome_area Area CSS
+:: 3.0 welcome_area Area CSS
 -------------------------- */
 
 .wellcome_area {
@@ -399,14 +413,10 @@ p {
     background-position: bottom center;
     background-size: cover;
     text-align: right;
+    background-color: #884bdf;
+    -webkit-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
-
-
-
-
-
-
-
 
 .wellcome_area:after {
     position: absolute;
@@ -686,8 +696,8 @@ p {
     background: -webkit-gradient(linear, right top, left top, from(#7873ed), to(#a865e1));
     background: -o-linear-gradient(right, #7873ed, #a865e1);
     background: linear-gradient(to left, #7873ed, #a865e1);
-    padding: 180px 0 80px 0;
-    top: -100px;
+    /*padding: 180px 0 80px 0;
+    top: -100px;*/
 }
 
 
@@ -703,7 +713,7 @@ p {
 }
 
 .cool-facts-content > i {
-    color: #ffffff;
+    color: #5b32b4;
     font-size: 36px;
 }
 
@@ -714,7 +724,7 @@ p {
 }
 
 .counter-area > h3 {
-    color: #ffffff;
+    color: #5b32b4;
     font-size: 60px;
     margin-bottom: 0;
     line-height: 1;
@@ -722,14 +732,50 @@ p {
 
 .cool-facts-content > p {
     font-size: 18px;
-    color: #ffffff;
+    color: #5b32b4;
     margin-bottom: 0;
 }
 
 /* --------------------------
 :: 8.0 Screenshots Area CSS
 -------------------------- */
-
+#jssor_1 {
+  position:relative;
+  margin:0 auto;
+  top:0px;
+  left:0px;
+  width:980px;
+  height:480px;
+  overflow:hidden;
+  visibility:hidden;
+}
+.slides {
+  position:relative;
+  top:0px;left:0px;
+  width:980px;
+  height:350px;
+  overflow:hidden;
+}
+.jssort101 {
+  position:absolute;
+  left:0px;
+  bottom:0px;
+  width:980px;
+  height:100px;
+}
+.jssor-prototype {
+  width:190px;
+  height:150px;
+}
+.jssor-prototype img {
+  cursor: zoom-in;
+}
+.jssora106 {
+  width:55px;
+  height:55px;
+  top:162px;
+  left:30px;
+}
 .app_screenshots_slides {
     padding: 0 6%;
 }
@@ -749,8 +795,10 @@ p {
     -ms-transform: scale(1);
     transform: scale(1)
 }
-
-.app-screenshots-area .owl-dot {
+.images-lab {
+  background-color: #d5e2e9;
+}
+.images-lab .owl-dot {
     height: 11px;
     width: 11px;
     border: 2px solid #a49fba;
@@ -760,12 +808,12 @@ p {
     margin-top: 50px;
 }
 
-.app-screenshots-area .owl-dot.active {
+.images-lab .owl-dot.active {
     background-color: #fb397d;
     border: transparent;
 }
 
-.app-screenshots-area .owl-dots {
+.images-lab .owl-dots {
     height: 100%;
     width: 100%;
     text-align: center;
@@ -774,7 +822,7 @@ p {
 /* --------------------------
 :: 9.0 privacy Area CSS
 -------------------------- */
-.privacy {
+.contact {
    background-color: white;
    position: relative;
    z-index: 1;
@@ -828,7 +876,7 @@ p {
 
 
 
-.rule-app {
+.rules {
 
     background: #a865e1;
     background: -webkit-linear-gradient(to left, #7873ed, #a865e1);
@@ -843,7 +891,7 @@ p {
     text-align: right;
 }
 
-.rule-app-heading > p {
+.rules-heading > p {
     color:rgb(255, 255, 255);
 }
 
@@ -892,25 +940,56 @@ p {
     font-size: 72px;
     font-weight: 700;
 }
-
+.footer-social-icon {
+    background-color: #e4dfdf;
+}
 .footer-social-icon > a > i {
-    background: #9b69e4;
-    font-size: 14px;
+    font-size: 18px;
     color: #ffffff;
     height: 40px;
     width: 40px;
     line-height: 40px;
     font-weight: 500;
-    border-radius: 10px 10px 10px 0px;
+    border-radius: 50px;
     margin-right: 10px;
 }
-
+.fa-twitter {
+  background-color:#32CCFE;
+}
+.fa-twitter:hover {
+  color: #32CCFE;
+}
+.fa-facebook {
+  background-color:#3C599F;
+}
+.fa-facebook:hover {
+  color: #3C599F;
+}
+.fa-telegram {
+  background-color: #0088cc;
+}
+.fa-telegram:hover {
+  color: #0088cc;
+}
+.fa-whatsapp {
+  background-color: #25d366;
+}
+.fa-whatsapp:hover {
+  color: #25d366;
+}
+.fa-instagram {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%,
+    #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+}
+.fa-instagram:hover {
+  background: radial-gradient(circle at 33% 100%, #FED373 4%,
+    #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF) !important;
+}
 .footer-social-icon > a > i:hover {
-    background: #fb397d;
-    color: #fff;
-    -webkit-transition-duration: 500ms;
-    -o-transition-duration: 500ms;
-    transition-duration: 500ms;
+    background: #e4dfdf;
+    -webkit-transition-duration: 400ms;
+    -o-transition-duration: 400ms;
+    transition-duration: 400ms;
 }
 
 .social-icon {
@@ -941,11 +1020,16 @@ p {
 }
 
 .footer-social-icon {
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
 }
 
 .footer-menu {
     margin-bottom: 15px;
+    margin-left: 0 !important;
+}
+
+.footer-menu h5 {
+  padding-top: 20px;
 }
 
 .copyright-text > p {
