--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,11 +5,11 @@
     .menu_area #nav .nav-link {
         padding: 35px 7.5px;
     }
-    
+
     .welcome-thumb {
         width: 50%;
-        bottom: -100px;
-        right: 50px;
+        /*bottom: -100px;*/
+        left: 50px;
     }
     .video-area {
         height: 550px;
@@ -45,11 +45,11 @@
         background-color: #5b32b4;
         text-align: center;
     }
-  
+
     .welcome-thumb {
         width: 50%;
-        bottom: -100px;
-       
+        /*bottom: -100px;*/
+
     }
     .wellcome-heading {
         margin-bottom: 70px;
@@ -80,7 +80,7 @@
     .section-heading {
         margin-bottom: 50px;
     }
-   
+
     .counter-area {
         min-width: 50px;
     }
@@ -119,7 +119,7 @@
         background-color: #5b32b4;
         text-align: center;
     }
-    
+
     .header_area {
         top: 0;
     }
@@ -135,8 +135,8 @@
     }
     .welcome-thumb {
         width: 90%;
-        bottom: -74px;
-        right: 0;
+        bottom: 74px;
+        left: 85px;
     }
     .logo_area > a > h2 {
         font-size: 40px;
@@ -201,7 +201,7 @@
     .wellcome-heading > h3 {
         font-size: 252px;
         top: -105px;
-        
+
     }
     .wellcome-heading,
     .single-cool-fact {
@@ -220,8 +220,8 @@
         font-size: 70px;
     }
     .welcome-thumb {
-        bottom: -109px;
-        width: 75%;
+        bottom: 9px;
+        width: 50%;
     }
     .wellcome-heading {
         margin-bottom: 50px;
