--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ p {
 
 .dropdown-item {
   color: #fff !important;
+  text-align: center !important;
 }
 .dropdown-item:hover {
   background-color: #884bdf !important;
