edit links of footer css in ltr

--- a/style-ltr.css
+++ b/style-ltr.css
@@ -997,7 +997,7 @@ p {
 }
 
 .footer-menu ul li a {
-    border-left: 2px solid #726a84;
+    border-right: 2px solid #726a84;
     display: block;
     padding: 0 7.5px;
     color: #726a84;
@@ -1008,7 +1008,7 @@ p {
 }
 
 .footer-menu ul li:last-child a {
-    border-left: 0 solid #ddd;
+    border-right: 0 solid #ddd;
 }
 
 .footer-social-icon {
